sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:4: error: '(' expected but identifier found.
  while pot< getNombreValeurs()-1
        ^AlgGnomeSort:6: error: illegal start of simple expression
} 
^