sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pot = 0 
  while pot< getNombreValeurs()-1
  
}